--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "janis",
-  "version": "0.0.30",
+  "version": "0.0.31",
   "description": "A toolkit for creating a hybrid Chatbot + Human UX",
   "main": "src/janis.js",
   "dependencies": {
-    "request-promise": "^3.0.0",
+    "request-promise-native": "^1.0.5",
+    "request": "^2.83.0",
     "socket.io-client": "^1.4.8"
   },
   "devDependencies": {},
