--- a/examples/messenger/nodejs/package.json
+++ b/examples/messenger/nodejs/package.json
@@ -10,7 +10,8 @@
     "request": "^2.72.0",
     "dotenv":"^2.0.0",
     "ws":"^1.1.1",
-    "janis":"^0.0.9"
+    "apiai":"^4.0.3",
+    "janis":"^0.0.33"
   },
     "engines": {
     "node": "5.11.1"
