--- a/examples/messenger/botkit/package.json
+++ b/examples/messenger/botkit/package.json
@@ -1,18 +1,18 @@
 {
-"scripts": {
+  "scripts": {
     "start": "node ./messenger_bot_botkit.js"
   },
   "dependencies": {
-    "botkit":"^0.4.3",
     "dotenv":"^2.0.0",
-    "janis":"^0.0.9"
+    "janis":"^0.0.33",
+    "botkit":"^0.6.7"
   },
-    "engines": {
+  "engines": {
     "node": "5.11.1"
   },
-  "repository" :
-  { "type" : "git", 
-    "url" : "https://github.com/janis-ai/janis-npm.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/janis-ai/janis-npm.git"
   },
-  "license" : "BSD-3-Clause" 
+  "license": "BSD-3-Clause"
 }
