--- a/examples/microsoft/nodejs/package.json
+++ b/examples/microsoft/nodejs/package.json
@@ -1,18 +1,34 @@
 {
-  "name": "janis-microsoft",
-  "version": "0.0.9",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "",
-    "restify": "^7.0.0",
-    "janis": "^0.0.42",
-    "botbuilder": ""
-  }
+    "name": "echobot-with-counter",
+    "version": "1.0.0",
+    "description": "Bot Builder v4 echo bot with counter sample",
+    "author": "Microsoft",
+    "license": "MIT",
+    "main": "index.js",
+    "scripts": {
+        "start": "node ./index.js",
+        "watch": "nodemon ./index.js",
+        "lint": "./node_modules/.bin/eslint .",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Microsoft/BotBuilder-Samples.git"
+    },
+    "dependencies": {
+        "botbuilder": "^4.2.0",
+        "botframework-config": "^4.2.0",
+        "dotenv": "^6.1.0",
+        "restify": "^7.2.3",
+        "janis": "^0.0.42"
+    },
+    "devDependencies": {
+        "eslint": "^5.8.0",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-node": "^8.0.0",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-standard": "^4.0.0",
+        "nodemon": "^1.18.6"
+    }
 }
