--- a/examples/slack/nodejs/package.json
+++ b/examples/slack/nodejs/package.json
@@ -1,15 +1,15 @@
 {
-"scripts": {
-    "start": "node ./slack_bot.js"
+  "scripts": {
+    "start": "node ./bot.js"
   },
   "dependencies": {
-    "dotenv":"^2.0.0",
-    "express":"^4.14.0",
-    "request":"^2.79.0",
-    "ws":"^1.1.1",
-    "janis":"^0.0.42"
+    "dotenv": "^2.0.0",
+    "express": "^4.14.0",
+    "request": "^2.79.0",
+    "ws": "^1.1.1",
+    "janis": "^0.0.44"
   },
-    "engines": {
-    "node": "5.11.1"
+  "engines": {
+    "node": "10"
   }
 }
