--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "janis",
-  "version": "0.0.49",
+  "version": "0.0.50",
   "description": "A toolkit for creating a hybrid Chatbot + Human UX",
   "main": "src/janis.js",
   "dependencies": {
+    "dashbot": "^10.4.5",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "socket.io-client": "^2.1.1"
