--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "src/janis.js",
   "dependencies": {
     "dashbot": "^10.4.5",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.5",
+    "node-fetch": "^2.6.7",
     "socket.io-client": "^2.1.1"
   },
-  "devDependencies": {},
   "scripts": {},
   "keywords": [
     "chatbot",
